# llfio

./: .ci.cmake  .clang-format  .clang-tidy  .docs.cmake  .gitattributes  .gitmodules  .travis.yml  Build.md  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Licence.txt  NiallsCPP_jamfile.jam  NiallsCPP_jamfile.v2  Notes.md  Readme.md  SConscript  SConstruct  TripleGit.sln  afio_8hpp.html  afio_8hpp.js  afio_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  appveyor.yaml  appveyor.yml  appveyor.yml.disabled  async__file__handle_8hpp.html  async__file__handle_8hpp.js  async__file__handle_8hpp_source.html  atomic__append_8hpp.html  atomic__append_8hpp.js  atomic__append_8hpp_source.html  base_8hpp.html  base_8hpp.js  base_8hpp_source.html  boost-build.jam  byte__io__handle_8hpp.html  byte__io__handle_8hpp.js  (+1454 more)
.github/workflows/: android-ndk.yml  ci.yml  documentation.yml  installability.yml  make_release.yml  programs.yml  unittests_linux.yml  unittests_macos.yml  unittests_windows.yml
BEBugsAsHTML/: index.html  index_by_target.html  index_inactive.html  style.css
afio/: SConscript  SConstruct  afio.hpp  async_file_io.hpp  config.hpp
afio/detail/: ErrorHandling.hpp  Int128_256.hpp  NiallsCPP11Utilities.hpp  SConscript  Utility.hpp  std_filesystem.hpp
attic/: .travis.yml  Readme.md  appveyor.yml  clang-reformat.sh  index.html  multiabi_alltests_gcc.sh  multiabi_alltests_msvc.bat  send_to_wandbox.sh  standalone_alltests_gcc.bat  standalone_alltests_gcc.sh  standalone_alltests_msvc.bat
attic/detail/: SpookyV2.cpp  SpookyV2.h
attic/doc/: Jamfile.v2  Readme.txt  (+15 more)
cmake/: QuickCppLibBootstrap.cmake  brew-llvm.sh  headers.cmake  interface.cmake  sources.cmake  tests.cmake  toolchain-linux-arm.cmake  toolchain-linux-libc++.cmake
example/: .clang-format  malloc1.cpp  malloc2.cpp  map_file.cpp  mapped_file.cpp  mirror_directory_tree.cpp  path_view_openat.cpp  read_entire_file1.cpp  read_stats.cpp  scatter_write.cpp  single-header.cpp  single-header.cpp.disabled  sparse_array.cpp  tls_socket_server.cpp  ts_examples.cpp  use_cases.cpp  wg21_path_view_benchmark.cpp  wg21_path_view_equivalent.cpp  wrap_tls_socket.cpp
fs_probe/: benchmark_locking.cpp  benchmark_locking.vcxproj  fs_probe.cpp  fs_probe.vcxproj  fs_probe.vcxproj.filters  fs_probe_results.yaml  withmsvc.bat  withposix.sh
graphs/: benchmark_locking 2x i5 M540 @ 2.53Ghz Win10 4.125 bandwidth.xlsx  benchmark_locking 2x i5 M540 @ 2.53Ghz Win10 4.125Gb bandwidth.xlsx  benchmark_locking 4x i7-3770K @ 3.50Ghz Win10 20.075Gb bandwidth.xlsx  benchmark_locking core count comparison.xlsx
html/: annotated.html  async__file__io_8hpp.html  async__file__io_8hpp_source.html  classes.html  classpackaged__task.html  classtriplegit_1_1async__io_1_1async__file__io__dispatcher__base-members.html  classtriplegit_1_1async__io_1_1async__file__io__dispatcher__base.html  classtriplegit_1_1async__io_1_1detail_1_1async__io__handle-members.html  classtriplegit_1_1async__io_1_1detail_1_1async__io__handle.html  classtriplegit_1_1async__io_1_1future-members.html  classtriplegit_1_1async__io_1_1future.html  classtriplegit_1_1async__io_1_1promise-members.html  classtriplegit_1_1async__io_1_1promise.html  classtriplegit_1_1async__io_1_1shared__future-members.html  classtriplegit_1_1async__io_1_1shared__future.html  classtriplegit_1_1async__io_1_1thread__pool-members.html  classtriplegit_1_1async__io_1_1thread__pool.html  classtriplegit_1_1base__store-members.html  classtriplegit_1_1base__store.html  classtriplegit_1_1boost_1_1adjacency__list-members.html  classtriplegit_1_1boost_1_1adjacency__list.html  classtriplegit_1_1collection__id-members.html  classtriplegit_1_1collection__id.html  classtriplegit_1_1fs__store-members.html  classtriplegit_1_1fs__store.html  classtriplegit_1_1storable__vertices-members.html  classtriplegit_1_1storable__vertices.html  classtriplegit_1_1unique__id-members.html  classtriplegit_1_1unique__id.html  dir_5702f8a2329a6e3cef9103a99d8690ff.html  dir_603090840fc3140f581dcce46ee211a4.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_func.html  (+16 more)
include/: llfio.hpp
meta/: libraries.json
programs/: CMakeLists.txt
programs/benchmark-async/: main.cpp  results.xlsx
programs/benchmark-dynamic_thread_pool_group/: main.cpp
programs/benchmark-io-congestion/: main.cpp
programs/benchmark-iostreams/: main.cpp
programs/benchmark-locking/: main.cpp
programs/collision-check/: CMakeLists.txt  lib.cpp
programs/fs-probe/: fs_probe_results.yaml  fs_probe_results_legacy.yaml  latencies.xlsx  main.cpp
programs/fs_probe/: benchmark_locking.cpp  benchmark_locking.filters  benchmark_locking.vcxproj  main.cpp
programs/illegal-codepoints/: main.cpp
programs/key-value-store/: Readme.md  main.cpp
programs/key-value-store/include/: key_value_store.hpp
reference/: Error Handling is Ocassionally Correct.html  Files are hard.html
scripts/: AddTryItNow.py  BuildTimes.py  GenJenkinsMatrixDashboard.py  JenkinsMatrixToDashboard.py  SoakTest.py  TabsToSpaces.py  XMLTidy.py  benchmark_locking_matrix.py  make_free_functions.py  readme_to_html.sh  travis_lldb.expect  xhtml_to_docbook.xsl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_5f.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  (+254 more)
single-header/: Readme.md
src/: afio.cpp  llfio.cpp
test/: integration_test_kernel.hpp  test.vcxproj  test.vcxproj.filters  test_kernel_decl.hpp
test-packaging/: example.cpp
triplegit/: SConscript  SConstruct  TripleGit.vcxproj
unittests/: !GenCatch.bat  SConscript  catch.hpp  drd.supp  json_encode.py  main.cpp  memcheck.supp  tsan.supp  unittests.vcxproj  update_coveralls.sh
(+1137 files in other folders)
